--- a/android/app/src/main/res/layout/item_speaker.xml
+++ b/android/app/src/main/res/layout/item_speaker.xml
@@ -7,20 +7,21 @@
     android:background="#ffffff"
     android:foreground="?android:attr/selectableItemBackground"
     tools:layout_width="@dimen/widget_default_height">
-    <android.support.v7.widget.CardView
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        card_view:cardElevation="6dp"
-        card_view:cardCornerRadius="2dp"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/layout_margin_medium"
-        android:layout_height="match_parent">
+        card_view:cardCornerRadius="2dp"
+        card_view:cardElevation="6dp">
+
         <ImageView
             android:id="@+id/speakers_list_image"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@null"
-            android:transitionName="@string/transition_speaker_to_activity"
             android:scaleType="centerCrop"
+            android:transitionName="@string/transition_speaker_to_activity"
             tools:src="@drawable/ic_account_circle_grey_24dp" />
 
         <LinearLayout
