feat: Add more functionality to About fragment (#1975)
* Fix #1973 added more functionality to About fragment

* Fix #1970 appropriate text displayed when there is no result (#1972)

* fix : elevation of speaker image (#1966)

--- a/android/app/src/main/res/layout/content_about_event.xml
+++ b/android/app/src/main/res/layout/content_about_event.xml
@@ -97,6 +97,7 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:id="@+id/ll_event_date"
                     android:orientation="horizontal"
                     android:padding="@dimen/padding_medium">
 
@@ -121,6 +122,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:id="@+id/ll_event_loc"
                     android:orientation="horizontal"
                     android:padding="@dimen/padding_medium">
 
