--- a/android/app/src/main/res/layout/activity_speakers.xml
+++ b/android/app/src/main/res/layout/activity_speakers.xml
@@ -59,6 +59,7 @@
                 android:id="@+id/toolbar_speakers"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
+                app:titleTextAppearance="@style/ToolbarTitle"
                 app:layout_collapseMode="pin" />
 
             <LinearLayout
