--- a/android/app/src/main/res/layout/fragment_about.xml
+++ b/android/app/src/main/res/layout/fragment_about.xml
@@ -1,7 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="match_parent">
+<android.support.design.widget.CoordinatorLayout
+    android:id="@+id/cordinate"
+    android:layout_width="match_parent"
+    android:layout_marginBottom="@dimen/mainlayout_bottom_margin"
+    android:layout_height="wrap_content">
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -30,11 +38,33 @@
                 android:layout_height="wrap_content"
                 android:clipToPadding="false" />
 
+
             <include layout="@layout/content_about_event" />
+
 
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-
 </android.support.design.widget.CoordinatorLayout>
+    <LinearLayout
+        android:id="@+id/images"
+        android:layout_alignParentBottom="true"
+        android:layout_alignBottom="@+id/cordinate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|fill_horizontal"
+        android:background="@color/color_accent"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_social_links"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            tools:listitem="@layout/item_social_link" />
+    </LinearLayout>
+
+</RelativeLayout>
