feat: Add FAQs section to the app. (#2314)

--- a/android/app/src/main/res/menu/drawer.xml
+++ b/android/app/src/main/res/menu/drawer.xml
@@ -63,6 +63,12 @@
             app:showAsAction="always"
             android:title="@string/menu_locations" />
 
+        <item
+            android:id="@+id/nav_faqs"
+            android:icon="@drawable/ic_question_answer_black_24dp"
+            app:showAsAction="always"
+            android:title="@string/menu_faqs" />
+
     </group>
 
     <group
