fix: Fix navigation flow of faq Fragment (#2377)

--- a/android/app/src/main/res/layout/fragment_faqs.xml
+++ b/android/app/src/main/res/layout/fragment_faqs.xml
@@ -20,6 +20,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="No FAQs to display." />
+        android:text="@string/no_faqs"/>
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="?android:actionBarSize"
+        android:layout_alignParentBottom="true"
+        android:background="@color/color_accent"
+        android:text="@string/login"
+        android:textColor="@color/white"/>
 
 </RelativeLayout>
