feat: Add fast scroller in speakerslistfragment (#2394)
* added scroll bar in speakerslistfragment

* fixed crash in fast scroll

* removed unused imports

* added constants for sort types

* code refactor

--- a/android/app/src/main/res/layout/list_speakers.xml
+++ b/android/app/src/main/res/layout/list_speakers.xml
@@ -42,4 +42,12 @@
             tools:visibility="visible" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
+    <com.futuremind.recyclerviewfastscroll.FastScroller
+        android:id="@+id/scroller"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentRight="true"/>
+
 </RelativeLayout>
