fix: description textviews have the same style (#2429)

--- a/android/app/src/main/res/layout/content_session_detail.xml
+++ b/android/app/src/main/res/layout/content_session_detail.xml
@@ -262,14 +262,12 @@
 
             <TextView
                 android:id="@+id/tv_description"
+                style="@style/TextAppearance.AppCompat.Body1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/layout_margin_large"
                 android:autoLink="web"
-                android:gravity="start"
-                android:textColor="@android:color/black"
                 android:textIsSelectable="true"
-                android:textSize="@dimen/text_size_large"
                 tools:text="Open Event!" />
         </LinearLayout>
 
