--- a/android/app/src/main/res/layout/list_feedbacks.xml
+++ b/android/app/src/main/res/layout/list_feedbacks.xml
@@ -32,5 +32,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="No Feedbacks!" />
+        android:text="No Feedbacks!"
+        android:textAppearance="?android:textAppearanceMedium" />
 </RelativeLayout>
