--- a/android/app/src/main/res/layout/list_feedbacks.xml
+++ b/android/app/src/main/res/layout/list_feedbacks.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <TextView
         android:id="@+id/feedback_header"
         android:layout_width="match_parent"
@@ -34,4 +34,20 @@
         android:layout_centerInParent="true"
         android:text="No Feedbacks!"
         android:textAppearance="?android:textAppearanceMedium" />
+
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/coordinate_layout_feedbacks"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/feedback_fab_post"
+            android:layout_width="@dimen/fab_width"
+            android:layout_height="@dimen/fab_height"
+            android:layout_gravity="bottom|end"
+            android:layout_marginBottom="@dimen/layout_margin_large"
+            android:layout_marginEnd="@dimen/layout_margin_large"
+            android:layout_marginRight="@dimen/layout_margin_large"
+            app:srcCompat="@drawable/ic_add_24dp" />
+    </android.support.design.widget.CoordinatorLayout>
 </RelativeLayout>
