--- a/android/app/src/main/res/values/dimens.xml
+++ b/android/app/src/main/res/values/dimens.xml
@@ -18,6 +18,7 @@
     <dimen name="card_elevation">3dp</dimen>
     <dimen name="card_corner_radius">3dp</dimen>
     <dimen name="card_width">200dp</dimen>
+    <dimen name="card_height">200dp</dimen>
 
     <!-- list divider specifics -->
     <dimen name="list_divider_height">0.8dp</dimen>
